--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 install:
-- sudo apt-get install --yes g++-4.8 cmake doxygen graphviz
+- sudo apt-get update
+- sudo apt-get install --yes g++-4.8 cmake doxygen
 script:
 - mkdir build
 - cd build
