--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 install:
 - sudo apt-get update
-- sudo apt-get install --yes g++-4.8 cmake doxygen
+- sudo apt-get install --yes g++ cmake doxygen
 script:
 - mkdir build
 - cd build
