--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 install:
 - sudo apt-get update
+- sudo apt-get upgrade
 - sudo apt-get install --yes g++ cmake doxygen
 script:
 - mkdir build
