--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ compiler:
   - clang
   - gcc
 install:
-  - sudo apt-get update
-  - sudo apt-get install --yes g++ cmake doxygen libqt4-dev libqt4-network libqt4-test libqtcore4 qt4-dev-tools qt4-qmake
+  - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get update && sudo apt-get install --yes g++ cmake doxygen libqt4-dev libqt4-network libqt4-test libqtcore4 qt4-dev-tools qt4-qmake; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install g++ cmake doxygen libqt4-dev libqt4-network libqt4-test libqtcore4 qt4-dev-tools qt4-qmake; fi
 script:
   - mkdir build
   - cd build
