--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ compiler:
   - gcc
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev-tools g++ doxygen libqt4-dev libqt4-network libqt4-test
+  - sudo apt-get install -qq libqt4-network cmake g++ libqt4-dev  libqt4-test qt4-dev-tools
 script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_DOCUMENTATION=ON
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
 branches:
   only:
