--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - gcc
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libqt4-network cmake g++ libqt4-dev  libqt4-test qt4-dev-tools
+  - sudo apt-get install -qq cmake g++ libqt4-*
 script:
   - mkdir build
   - cd build
