--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ compiler:
   - clang
   - gcc
 install:
+  - cat /etc/issue
+  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake g++ libqt4-*
+  - sudo apt-get install -qq cmake
+  - sudo apt-get install -qq qt4-dev-tools
 script:
   - mkdir build
   - cd build
