--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: cpp
 compiler:
-  - clang
+  #- clang
   - gcc
-install:
+before_install:
   - cat /etc/issue
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake
   - sudo apt-get install -qq qt4-dev-tools
-script:
+before_script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake ..
+after_success:
   - make
 branches:
   only:
