--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ compiler:
   - gcc
 before_install:
   - cat /etc/issue
-  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake
-  - sudo apt-get install -qq qt4-dev-tools
+  - add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  - apt-get update -qq
+  - apt-get install -qq cmake
+  - apt-get install -qq qt4-dev-tools
 before_script:
   - mkdir build
   - cd build
