--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: cpp
 cache:
   apt: true
@@ -9,10 +8,10 @@ compiler:
   - gcc
 before_install:
   - cat /etc/issue
-  - add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - apt-get update -qq
-  - apt-get install -qq cmake
-  - apt-get install -qq qt4-dev-tools
+  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq cmake
+  - sudo apt-get install -qq qt4-dev-tools
 before_script:
   - mkdir build
   - cd build
