--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake
   - sudo apt-get install -qq qt4-dev-tools
+  - sudo ls /usr/include/qt4/QtNetwork/
 before_script:
   - mkdir build
   - cd build
