--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,21 @@
 language: cpp
 cache:
   apt: true
-  directories:
-    - build
 compiler:
   #- clang
   - gcc
 before_install:
-  - cat /etc/issue
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo add-apt-repository --yes ppa:kalakris/cmake
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake
   - sudo apt-get install -qq qt4-dev-tools
-  - export PATH=$PATH:/usr/include/qt4/QtNetwork:/usr/include/qt4/QtCore
 before_script:
   - mkdir build
   - cd build
   - cmake ..
-  - cat CMakeFiles/QCAS.dir/depend.make
-  - cat /usr/include/qt4/QtNetwork/QNetworkAccessManager
 script:
-  - make VERBOSE=1
+  - make
 branches:
   only:
     - master
